deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: react-app
  labels:
    app: react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
      - name: react-app
        image: "ghcr.io/neerajsinghnegi/nodejs:latest"
