service.yml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
  namespace: default
spec:
  selector:
    app: react-app
  ports:
  - name: react-app
    port: 3000
