ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik   
spec:
  rules:
  - host: hello.4178fd5d-79c0-4130-9dad-b50ec4c0ec66.k8s.civo.com
    http:
      paths:
      - backend:
          service:
            name: react-app-service
            port:
              number: 3000
        path: /
        pathType: Prefix
