jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
spec:
  rules:
  - host: jenkins.4178fd5d-79c0-4130-9dad-b50ec4c0ec66.k8s.civo.com
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
