traefik.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: hello.4178fd5d-79c0-4130-9dad-b50ec4c0ec66.k8s.civo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: react-app-service
          servicePort: 3000
